Cambios Index,Habitaciones,Google Fonts

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -3,7 +3,7 @@ es:
 
   ubicacion_hotel2: 
 
-  confort_hotel: Los huéspedes disfrutarán de las excelentes comodidades y servicios del hotel, entre los que se incluye ascensor, bar, servicio de lavandería, salón de actos, restaurante, también cuenta con servicios recreativos y de entretenimiento de categoría, incluyendo gimnasio, sauna, área de juegos. Con el fin de ofrecer a los huéspedes una estancia memorable, este hotel une las ventajas de un servicio experto con las comodidades más novedosas. "al presentar tu tarjeta taca distancia, acumula 500 millas x estadía".
+  confort_hotel: Los huéspedes disfrutarán de las excelentes comodidades y servicios del hotel, entre los que se incluye ascensor, bar, servicio de lavandería, salón de actos, restaurante, también cuenta con servicios recreativos y de entretenimiento de categoría, incluyendo gimnasio y sauna. Con el fin de ofrecer a los huéspedes una estancia memorable, este hotel une las ventajas de un servicio experto con las comodidades más novedosas.
 
   habitaciones_clarion: Habitaciones
 
