--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -83,6 +83,25 @@ es:
 
   aboutus_clarion: Sobre Nosotros
   
+  parrafo1: Creemos en la calidad de nuestros servicios y atención como nuestra mayor garantía y fuente de satisfacción hacia usted, por eso deseamos que se sienta con la mayor confianza hacia nosotros y tenga la seguridad de que ha hecho una buena y segura elección. Seguimos trabajando para ofrecerle el mejor hospedaje de San Pedro Sula.
+  
+  parrafo2: Estamos situados en la bella ciudad de San Pedro Sula, la capital industrial de Honduras, a tan solo 20 minutos del aeropuerto internacional Ramon Villeda Morales. Este hotel esta ubicado en la avenida circunvalaci[on a 5 minutos del centro, donde esta localizada la catedral y el parque central, Hotel Clarion San Pedro Sula está rodeada por áreas comerciales y financieras, es el lugar ideal para reuniones de trabajo y viajes de placer. 
+  
+  parrafo3: San Pedro Sula le ofrece fácil acceso a las ciudades y sitios más visitados por los turistas como ser, Copán Ruinas, Tela, Ceiba, Islas de la Bahía, Utila y muchos más.
+  
+  bienvenida1: BIENVENIDA
+  
+  calurosa_bienvenida: Hotel Clarion San Pedro Sula, le da una calurosa bienvenida. Es un honor poder servirle y atenderle.
+  
+  mision: Misión
+  
+  texto_mision: Garantizar el mejor descanso y proveer calidad en todos nuestros servicios como nuestra mayor garantía y fuente de satisfacción hacia el huésped.
+  
+  vision: Visión
+  
+  texto_vision: Lograr la preferencia y satisfacción de nuestros clientes, posicionándonos como uno de los mejors hoteles en San Pedro Sula.
+  
+  valores: Valores
   date:
     abbr_day_names:
     - dom
