--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -102,6 +102,9 @@ es:
   texto_vision: Lograr la preferencia y satisfacción de nuestros clientes, posicionándonos como uno de los mejors hoteles en San Pedro Sula.
   
   valores: Valores
+  
+  nuestra_ubicacion: Nuestra Ubicación
+  
   date:
     abbr_day_names:
     - dom
