cambios fotos habitaciones y confort y decoraciones asi como lo de bienvenidos al hotel

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,5 +1,5 @@
 es:
-  bienvenida_hotel: Bienvenidos al Hotel Clarion San Pedro Sula
+  bienvenida_hotel: Bienvenidos a Hotel Clarion San Pedro Sula
 
   ubicacion_hotel2: 
 
@@ -15,7 +15,7 @@ es:
 
   todas_habitaciones: Todas nuestras habitaciones cuentan con
 
-  confort_clarion: Confort
+  confort_clarion: Comfort
 
   fina_decoracion: Fina Decoracion
 
