Promociones, eventos y banquetes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,6 +87,13 @@ en:
 
   aboutus_clarion: About Us
 
+  cumple: Birthdays
+
+  romantico: Romantic Weekend
+
+  menu: Executive Menu
+
+  habitacion: 3X2 Room
 
 
 
