--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,10 +19,16 @@ en:
   todas_habitaciones: All our rooms have
 
   confort_clarion: Comfort
+  
+  confort_texto: We offer many services and amenities to make you feel at home, and to keep in touch with friends and family.
+  
+  nuestras_texto: All our comfortable, relaxing and luxurious rooms have been decorated with the best taste to make your stay a memorable and well exceed the expectations of our guests, feature fine amenities to make your stay unique, including, Air conditioning, TV 32 cable, access to high speed wireless internet, work desk, spacious bathrooms with shower and dryer. The host has the courtesy the coffee and water in the room. The hotel has 24 hours security and surveillance cameras in all areas.
 
   fina_decoracion: Fine Decoration
 
   reservaciones_clarion: Bookings
+  
+  reservaciones_texto: Address, Avenida Circunvalación 2 Calle, S.O. Bo. Rio de piedras. San Pedro Sula, Cortés, Honduras
 
   texto_decoracion: All our rooms and suites are tastefully decorated to make your stay an unforgettable experience.
 
@@ -86,6 +92,40 @@ en:
   nombre_formulario: Name
 
   aboutus_clarion: About Us
+  
+  
+  
+  parrafo1: We believe the quality of our services and attention as our greatest warranty and source of satisfaction to you. We want you to feel greater confidence in us and have the sureness you have made the best and safe choice. We are working to provide the best hosting in San Pedro Sula.
+  
+  parrafo2: We are spotted in the beauty city of San Pedro Sula, the Industrial Capital of Honduras. Our hotel is located in Avenida Circunvalación, only 5 minutes from downtown, where you can find the Cathedral and the Central Park. Hotel Clarion San Pedro Sula is surrounded by commercial and finances areas, it´s an ideal place business meetings and pleasure travel.
+  
+  parrafo3: San Pedro Sula offers you easy access to towns and places most visited by tourists, such as Copan Ruins, Tela, La Ceiba, The Bay Islands and many more.
+  
+  bienvenida1: WELCOME
+  
+  calurosa_bienvenida: Hotel Clarion San Pedro Sula welcomes you. It’s an honor to serve and help you.
+  
+  mision: MISSION
+  
+  texto_mision: Certify the best rest and provide quality in all our services as our greatest warrant and source of satisfaction to the host.
+  
+  vision: VISSION
+  
+  texto_vision: Achieve the preference and satisfaction of our customers, positioning us as one of the best hotels in San Pedro Sula.
+  
+  valores: VALUES
+  
+  nuestra_ubicacion: Nuestra Ubicación
+  
+  orden: Order
+  
+  limpieza: Cleanliness
+  
+  respeto: Respect
+  
+  trabajo: Work
+  
+  honradez: Honesty
 
 
 
