--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -12,14 +12,20 @@ es:
   galeria_clarion: Galeria
 
   nuestras_habitaciones: Nuestras Habitaciones
-
+  
+  nuestras_texto: Todas nuestras comodas,relajantes y lujosas habitaciones han sido decoradas con el mejor gusto para hacer de cada estancia una experiencia inolvidable y así sobrepasar las expectativas de nuestros huéspedes,cuentan con finas amenidades para hacer de su estadia unica, entre ellas, Aire acondicionado, TV de 32 con cable, acceso a internet inalambrico de alta velocidad, escritorio de trabajo, amplios baños con ducha y secadora. El huesped tiene como cortesia el cafe y el agua dentro de la habitacion. El Hotel cuenta con seguridad las 24 horas y camaras de vigilancias en todas sus areas.
+  
   todas_habitaciones: Todas nuestras habitaciones cuentan con
 
   confort_clarion: Confort
+  
+  confort_texto: Le ofrecemos muchos servicios y comodidades para que se sienta como en casa, y pueda mantenerse en contacto con sus amigos y su familia.
 
   fina_decoracion: Fina Decoracion
 
   reservaciones_clarion: Reservaciones
+  
+  reservaciones_texto: Dirección, Avenida Circunvalación 2 Calle, S.O. Bo. Rio de piedras. San Pedro Sula, Cortés, Honduras
 
   texto_decoracion: Todas nuestras habitaciones y Suites están finamente decoradas, para hacer de su estadía una experiencia inolvidable.
 
