--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -115,7 +115,7 @@ en:
   
   valores: VALUES
   
-  nuestra_ubicacion: Nuestra Ubicación
+  nuestra_ubicacion: Our location
   
   orden: Order
   
