--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,7 +135,15 @@ en:
 
   habitacion: 3X2 Room
   
-  otros_servicios: Otros Servicios
+  otros_servicios: Other Services
+  
+  masajes: Massage
+  
+  transporte: Transport
+  
+  lavanderia: Laundry
+  
+  servicio_de_transporte: Shuttle
 
 
 
