--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -144,7 +144,12 @@ en:
   lavanderia: Laundry
   
   servicio_de_transporte: Shuttle
-
+  
+  restaurante_pergaminos: Restaurant Pergaminos
+  
+  restaurante_texto: The hotel restaurant "Pergaminos" offers a relaxed and unique with delicious national and international dishes are always prepared with the freshest ingredients. Room service is available from 6:00 a.m. to 11:00 pm with hot and cold dishes, providing a culinary experience in the comfort of your room.
+  
+  horario: Restaurant Hours
 
 
 
