--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -165,9 +165,9 @@ en:
   
   centro_de_negocio: Business center
   
-  centro_texto: For business travelers we offer additional conveniences like access to fax, photocopying, printing and scanning in our business center with computer access to high speed internet.
+  centro_de_texto: For business travelers we offer additional conveniences like access to fax, photocopying, printing and scanning in our business center with computer access to high speed internet.
 
-  eventos_texto: Clarion Hotel San Pedro Sula has modern and spacious rooms with capacity for 200 people, equipped with gradual lighting systems and advanced technology in audiovisual. We are committed to ensuring that your event is unique and your guests with an unforgettable experience.
+  eventos_texto: Clarion Hotel San Pedro Sula has modern and spacious rooms with capacity for 150 people, equipped with gradual lighting systems and advanced technology in audiovisual. We are committed to ensuring that your event is unique and your guests with an unforgettable experience.
 
   contacto: Contact
   
